- Added markers for recordings seen less or more 85%

2015-05-10:

- Changed timers- and lastrecordings-handling in mainmenu
- Added shadowsRecordingsMain1.png

2015-05-10:

- Fixed menuFadetime-parameter, added shifting for displaychannel (both provided by MegaX@vdrportal)

2015-05-16:

- Added shifting for displaymessage, displayreplay and displayvolume (provided by MegaX@vdrportal)
- Fixed typo in 07_notNewWatchedNotCutted-recordingsMarker (provided by MegaX@vdrportal)

2015-05-18:

- Fixed floatwidth and floatheight in displaymenudetailrecording

2015-05-20:

- Fixed typo in displaymenudetailrecording

2015-05-21:

- Added detail- and list-view for plex-plugin (incomplete)

2015-05-21:

- Fixed timerconflicts in mainmenu, removed useless code, minor improvements for plex-template

2015-05-22:

- Fixed timerconflicts in mainmenu (second try)
- Some more improvements for plex-template

2015-05-23:

- Changed columns- and rows-info in plex-template
- Fixed startpoint of elapsed-bar in plex-template
- Fixed episodes in detail-grid (plex-template)

2015-05-24:

- Some more improvements for plex-template (III)
- Fixed height of plex-header
- Added translations for columns- and rows-info (plex-template)

2015-05-24:

- Some more improvements for plex-template (IV)
- Some more improvements for plex-template (V)

2015-05-26:

- Changed buttonPlexActiveCover.png

2015-05-31:

- Increased possible count of displayed lastrecordings to seven
- Added plug-setup-skinpreview.xml
- Adapted displayreplay for time/perma-shift
- Added replayTimeshift.svg

2015-05-31:

- Some graphical improvements for skinpreview

2015-06-01:

- Reworked plug-setup-skinpreview.xml

2015-06-02:

- Small improvements plug-setup-skinpreview.xml

2015-06-06:

- Added detailview for displaymenurecordings

2015-06-10:

- Removed detailview for displaymenurecordings, small fixes
- Removed condition for currentelemnt in displaymenurecordings

2015-06-10:

- Fixed 00_menuFadetime in displayreplay