@@ -4,17 +4,17 @@
 		<area x="0" y="0" width="100%" height="100%" layer="1">
 			<drawimage condition="not{brightBackground}" x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientPNG" />
 			<drawimage condition="{brightBackground}" x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientPNGBright" />
-			<drawrectangle  x="1%" y="59%" width="39%" height="39%" color="{clrTransparent}" />           
+			<drawrectangle  x="1%" y="59%" width="39%" height="39%" color="{clrTransparent}" />
 		</area>
 		<area x="0" y="0" width="100%" height="100%" layer="2">
 			<drawimage  x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowsMenuTVLB" />
 		</area>
 		<area x="0" y="0" width="100%" height="11%" layer="2">
 			<drawimage  x="0" width="{areawidth}*0.972" height="{areaheight}*0.972" imagetype="skinpart" path="gradientHeader" />           
-		</area>      
+		</area>
 	</background>
 
-		<header>
+	<header>
 		<area x="1%" y="2%" width="60%" height="7%" layer="3">
 			<drawtext condition="{whatsonnow}||{whatsonnext}||{whatsonfavorites}" x="4%" valign="center" font="{light}" fontsize="80%" color="{clrLightGray}" text="{title}" />
 			<drawimage name="logo" condition="{whatson}" imagetype="channellogo" path="{channelid}" x="0" y="1%" width="15%" height="90%" valign="center" />
@@ -59,10 +59,13 @@
 				<drawtext condition="isset{title}" name="menutext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title}"/>
 			</areascroll>
 <!-- WHATSONNOW -->
-			<area condition="not{separator}++{whatsonnow}" x="42%" width="6%" layer="4">
+			<area condition="not{separator}++{whatsonnow}++{channellogoexists}" x="42%" width="6%" layer="4">
 				<drawimage name="logo" imagetype="channellogo" path="{channelid}" x="10%" y="15%" width="70%" height="70%"  />
-			</area>   
-            <area condition="not{separator}++{whatsonnow}" x="49%" width="5%" layer="4">
+			</area>
+			<areascroll condition="not{separator}++not{channellogoexists}++{whatsonnow}" scrollelement="channel" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="41%" width="7%" layer="4">
+				<drawtext name="channel" x="10%" y="15%" valign="center" font="{light}" fontsize="50%" color="{clrLightGray}" text="{channelname}"/>
+			</areascroll>
+			<area condition="not{separator}++{whatsonnow}" x="49%" width="5%" layer="4">
 				<drawtext condition="isset{title}" name="menutext" x="0" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{start}" />
 			</area>
 			<areascroll condition="not{separator}++{whatsonnow}++empty{shorttext}" scrollelement="menutext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="56%" width="37%" layer="4">
@@ -76,20 +79,28 @@
 				<drawimage condition="not{coloredElapsed}" x="4%" y="{areaheight}-3" width="{areawidth}*{elapsed}/{duration}*0.945" height="{areaheight}/20" imagetype="skinpart" path="elapsedBarMono" />
 			</area>
 <!-- WHATSONNEXT -->
-			<area condition="not{separator}++{whatsonnext}" x="42%" width="6%" layer="4">
+			<area condition="not{separator}++{whatsonnext}++{channellogoexists}" x="42%" width="6%" layer="4">
 				<drawimage name="logo" imagetype="channellogo" path="{channelid}" x="10%" y="15%" width="70%" height="70%" />
 			</area>
+			<areascroll condition="not{separator}++not{channellogoexists}++{whatsonnext}" scrollelement="channel" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="41%" width="7%" layer="4">
+				<drawtext name="channel" x="10%" y="15%" valign="center" font="{light}" fontsize="50%" color="{clrLightGray}" text="{channelname}"/>
+			</areascroll>
 			<area condition="not{separator}++{whatsonnext}" x="49%" width="5%" layer="4">
 				<drawtext condition="isset{title}" name="menutext" x="0" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{start}" />
 			</area>
-			 <areascroll condition="not{separator}++{whatsonnext}" scrollelement="menutext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="56%" width="37%" layer="4">
-				<drawtext condition="isset{title}++empty{shorttext}" name="menutext" x="3%" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title}"/>
-				<drawtext condition="isset{title}++isset{shorttext}" name="menutext" x="3%" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title} - {shorttext}"/>
+			<areascroll condition="not{separator}++{whatsonnext}++empty{shorttext}" scrollelement="menutext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="56%" width="37%" layer="4">
+				<drawtext condition="isset{title}" name="menutext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title}"/>
+			</areascroll>
+			<areascroll condition="not{separator}++{whatsonnext}++isset{shorttext}" scrollelement="menutext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="56%" width="37%" layer="4">
+				<drawtext condition="isset{title}" name="menutext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title} - {shorttext}"/>
 			</areascroll>
 <!-- WHATSONFAVORITES -->           
-			<area condition="not{separator}++{whatsonfavorites}" x="41%" width="5%" layer="4">
+			<area condition="not{separator}++{whatsonfavorites}++{channellogoexists}" x="41%" width="5%" layer="4">
 				<drawimage name="logo" imagetype="channellogo" path="{channelid}" x="15%" y="15%" width="70%" height="70%" />
 			</area>
+			<areascroll condition="not{separator}++{whatsonfavorites}" scrollelement="channel" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="41%" width="5%" layer="4">
+				<drawtext condition="not{channellogoexists}" name="channel" x="10%" y="15%" valign="center" font="{light}" fontsize="50%" color="{clrLightGray}" text="{channelname}"/>
+			</areascroll>
 			<area condition="not{separator}++{whatsonfavorites}" x="47%" width="5%" layer="3">
 				<drawtext x="0" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{date}" />
 			</area>
@@ -99,7 +110,7 @@
 			<areascroll condition="not{separator}++{whatsonfavorites}" scrollelement="menutext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="59%" width="33%" layer="4">
 				<drawtext condition="isset{shorttext}" name="menutext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title} - {shorttext}"/>
 				<drawtext condition="empty{shorttext}" name="menutext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title}"/>
-			</areascroll>               
+			</areascroll>
 <!-- Separator -->
 			<area condition="{separator}" x="50%" width="45%" layer="4">
 				<drawtext condition="isset{title}" x="0" align="center" valign="center" font="{light}" fontsize="70%" color="{clrHigh}" text="{title}" />
